# CppLabs

./: .gitignore  README.md
Lab1/: README.md  main.cpp
Lab10/: README.md
Lab10/lib/: CMakeLists.txt  interpreter.h  interpreter2.h  lexer.h  parser.h
Lab10/tests/: CMakeLists.txt  function_test.cpp  illegal_ops_test.cpp  loop_and_branch_test.cpp  types_test.cpp
Lab2/: CMakeLists.txt  README.md
Lab2/lib/: number.cpp  number.h
Lab2/tests/: number_test.cpp
Lab3/: README.md
Lab4/: README.md
Lab4/lib/: ArgParser.cpp  ArgParser.h
Lab4/tests/: argparser_test.cpp
Lab5/: README.md  main.cpp
Lab6/: CMakeLists.txt  README.md  main.cpp
Lab7/: README.md
Lab7/lib/: unrolled_list.h
Lab7/tests/: simple_ut.cpp
Lab8/: README.md  main.cpp
Lab8/lib/: processing.h
Lab8/tests/: drop_nullopt_ut.cpp  filter_ut.cpp  split_expected_ut.cpp  split_ut.cpp  transform_ut.cpp  write_ut.cpp
Lab9/: README.md  main.cpp
Lab9/lib/: CMakeLists.txt  scheduler.h
Lab9/tests/: CMakeLists.txt  aggregate_by_key_ut.cpp
